# caramia-extras

./: caramia-extras.cabal  caramia-util.cabal
demos/shader-effects/: Main.hs  day-and-night.fsh
lib/Caramia/: Extras.hs
lib/Caramia/Extras/: LoadImage.hs  MonotonicTime.hs  Rectangle.hs  ShaderEffects.hs
tests/sanity-check/: Main.hs
