name:                caramia-extras
version:             0.1.0.0
synopsis:            Extra operations for Caramia
homepage:            https://github.com/Noeda/caramia-extras/
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
copyright:           Copyright (c) 2014 Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

description:
    This library implements useful operations on top of the Caramia library.
    .
    The core Caramia library is low-level. This library brings some higher
    level concepts to Caramia.

library
  exposed-modules:     Caramia.Extras
                       Caramia.Extras.LoadImage
  build-depends:       base >=4.7 && <5.0
                      ,caramia ==0.1.*
                      ,vector >=0.10 && <1.0
                      ,bytestring >=0.10 && <1.0
                      ,text >=0.9 && <2.0
                      ,JuicyPixels >=3.1 && <4.0
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable, OverloadedStrings, FlexibleInstances
                      ,FlexibleContexts, LambdaCase, MultiWayIf, ViewPatterns
                      ,NoImplicitPrelude

