name:                caramia-extras
version:             0.1.0.0
synopsis:            Extra operations for Caramia
homepage:            https://github.com/Noeda/caramia-extras/
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
copyright:           Copyright (c) 2014 Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

description:
    This library implements useful operations on top of the Caramia library.
    .
    The core Caramia library is low-level. This library brings some higher
    level concepts to Caramia.

library
  exposed-modules:     Caramia.Extras
                       Caramia.Extras.LoadImage
                       Caramia.Extras.MonotonicTime
                       Caramia.Extras.ShaderEffects
                       Caramia.Extras.Rectangle
  build-depends:       base >=4.6 && <5.0
                      ,caramia ==0.1.*
                      ,vector >=0.10 && <1.0
                      ,bytestring >=0.10 && <1.0
                      ,text >=0.9 && <2.0
                      ,JuicyPixels >=3.1 && <4.0
                      ,clock >=0.4 && <1.0
                      ,containers >=0.5 && <1.0
                      ,random >=1.0 && <2.0
                      ,lens >=4.2 && <5.0
                      ,semigroups >=0.15 && <1.0
                      ,mtl >=2.1 && <3.0
                      ,deepseq >=1.3 && <2.0
                      ,deepseq-generics >=0.1 && <1.0
                      ,transformers >=0.3 && <1.0
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite sanity-check
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests/sanity-check
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base, caramia-extras, caramia
                      ,test-framework
                      ,test-framework-quickcheck2
                      ,test-framework-hunit
                      ,lens >=4.2 && <5.0
                      ,transformers >=0.3 && <1.0
                      ,containers >=0.5 && <1.0
                      ,QuickCheck >=2.7 && <3.0
  default-language:    Haskell2010

benchmark shader-effects
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded
  hs-source-dirs:      demos/shader-effects
  build-depends:       base, caramia
                      ,caramia-extras
                      ,caramia-sdl2
                      ,text >=0.9 && <2.0
  default-language:    Haskell2010

